--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -6,12 +6,28 @@
     padding:10px;
     font-family: 'Comfortaa', cursive;
     .card{
-        background-color: $bg_body;
-        padding:5px;
+        background-color: #18303da6;
+        padding:25px;
         text-align: center;
+        margin: 20px;
+        border-radius: 0px,0px,30px,30px;
+        font-weight: 800;
+        color: white;
+        h5{
+            background-color: #1a98d5cc;
+            width: 50%;
+            margin: auto;
+            line-height: 2;
+            border-radius: 15px;
+        }
         img{
             width: 100%;
-            height: 100%;
+            height: 330px;
+            object-fit: cover;
+        }
+        .card-img-top{
+            width: 100%;
+            height: 330px;
             object-fit: cover;
         }
     }
