--- a/scss/_conocenos.scss
+++ b/scss/_conocenos.scss
@@ -1,47 +1,69 @@
 /* conocenos */
 @mixin cuadrados {
-    background-color: #6a93cb;
-    background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
+    background-color: rgba(0, 106, 255, 0.308);
+    background-image: linear-gradient(315deg, rgba(68, 67, 67, 0.767), rgba(10, 11, 12, 0.25) 74%);
     line-height: 1.6;
-    border: black;
-    border-style: solid;
     width: 100%;
     height: 40%;
     display: inline;
     margin: 15px;
 }
 
-.cuadrados {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-
-    .formato-p {
-        font-family: 'Comfortaa', cursive;
-        font-size: 20px;
+main {
+    .background {
+        background: #0a0a0a;
+        background: linear-gradient(to right, hsla(0, 0%, 2%, 0.849), hsla(240, 1%, 43%, 0.376)),url(https://fondosmil.com/fondo/60032.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        position: relative;
     }
 
-    .cuadrado1 {
-        @include cuadrados;
-        border-radius: 50px 100px;
-    }
-    .cuadrado3 {
-        display: inline-block;
-        border: black;
-        border-style: solid;
-        padding: 10px;
-        margin: 10px;
-        text-align: center;
-        background-color: #6a93cb;
-        background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
-        font-family: 'Comfortaa', cursive;
-        h2{
+    .cuadrados {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+
+        .formato-p {
             font-family: 'Comfortaa', cursive;
             font-size: 20px;
-        }
-    }
+            font-weight: 800;
+            color: white;
 
+        }
+
+        .cuadrado1 {
+            @include cuadrados;
+            border-radius: 30px;
+        }
+
+        .cuadrado3 {
+            display: inline-block;
+            padding: 10px;
+            margin: 10px;
+            text-align: center;
+            font-family: 'Comfortaa', cursive;
+
+            span {
+                font-family: 'Comfortaa', cursive;
+                font-size: 20px;
+                background-color: rgba(0, 0, 0, 0.493);
+                color: white;
+                width: 60%;
+                margin: auto;
+                border-radius: 10px;
+                padding: 10px;
+                font-weight: 800;
+            }
+            img{
+                width: 90%;
+                margin-top: 20px;
+                border-radius: 20px;
+            }
+        }
+
+    }
 }
 
 /* fin conocenos */
