--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,8 +1,10 @@
 /* contacto */
 .contact-parent {
     display: flex;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    color: white;
+    font-weight: 500;
 
     .contact-child {
         display: flex;
@@ -81,7 +83,7 @@
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
-        background-color: $bg_body;
+        background-color: hsla(0, 0%, 0%, 0.521);
     }
 }
 
