--- a/scss/_galeriasgrid.scss
+++ b/scss/_galeriasgrid.scss
@@ -2,27 +2,30 @@
 .gallery-container {
     display: grid;
     grid-auto-flow: dense;
-    grid-template-columns: repeat(auto-fill, minmax(min(20rem), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(25rem), 1fr));
     grid-auto-rows: 22rem;
-    padding: 2px;
+    padding: 35px;
     gap: 5px;
-    margin: 5px;
+
     .gallery-item {
         position: relative;
         overflow: hidden;
         transition: all 500ms ease;
         border-radius: 5px;
-        box-shadow: 1px 10px 15px rgba(0,0,0,0.50);
-        img{
+        box-shadow: 1px 10px 15px rgba(0, 0, 0, 0.50);
+
+        img {
             transition: all 500ms ease;
             width: 100%;
             height: 100%;
             object-fit: cover;
-            &:hover{
-                transform:scale(1.2);
+
+            &:hover {
+                transform: scale(1.2);
                 cursor: pointer;
             }
         }
+
         .gallery-title {
             position: absolute;
             bottom: 0;
@@ -40,27 +43,30 @@
 .galeria-compras {
     display: grid;
     grid-auto-flow: dense;
-    grid-template-columns: repeat(auto-fill, minmax(min(20rem), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(25rem), 1fr));
     grid-auto-rows: 22rem;
-    padding: 2px;
+    padding: 35px;
     gap: 5px;
-    margin: 5px;
+
     .gallery-item {
         position: inherit;
         overflow: hidden;
         transition: all 500ms ease;
         border-radius: 5px;
-        box-shadow: 1px 10px 15px rgba(0,0,0,0.50);
-        img{
+        box-shadow: 1px 10px 15px rgba(0, 0, 0, 0.50);
+
+        img {
             transition: all 500ms ease;
             width: 100%;
             height: 100%;
             object-fit: cover;
-            &:hover{
-                transform:scale(1.2);
+
+            &:hover {
+                transform: scale(1.2);
                 cursor: pointer;
             }
         }
+
         .gallery-title {
             position: sticky;
             bottom: 0;
@@ -71,45 +77,51 @@
         }
     }
 }
+
 /* fin galeria compras */
 
 /* alquileres galeria */
 .alquileres1 {
     margin-top: 0;
+
     .galeria-alquileres {
-            z-index: 0;
-            display: grid;
-            grid-auto-flow: dense;
-            grid-template-columns: repeat(auto-fill, minmax(min(20rem), 1fr));
-            grid-auto-rows: 22rem;
-            padding: 2px;
-            gap: 5px;
-            margin: 5px;
-            .gallery-item {
-                position: inherit;
-                overflow: hidden;
+        z-index: 0;
+        display: grid;
+        grid-auto-flow: dense;
+        grid-template-columns: repeat(auto-fill, minmax(min(25rem), 1fr));
+        grid-auto-rows: 22rem;
+        padding: 35px;
+        gap: 5px;
+
+        .gallery-item {
+            position: inherit;
+            overflow: hidden;
+            transition: all 500ms ease;
+            border-radius: 5px;
+            box-shadow: 1px 10px 15px rgba(0, 0, 0, 0.50);
+
+            img {
                 transition: all 500ms ease;
-                border-radius: 5px;
-                box-shadow: 1px 10px 15px rgba(0,0,0,0.50);
-                img{
-                    transition: all 500ms ease;
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    &:hover{
-                        transform:scale(1.2);
-                        cursor: pointer;
-                    }
-                }
-                .gallery-title {
-                    position: sticky;
-                    bottom: 0;
-                    color: white;
-                    background: $bg_nav;
-                    width: 100%;
-                    text-align: center;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+
+                &:hover {
+                    transform: scale(1.2);
+                    cursor: pointer;
                 }
             }
+
+            .gallery-title {
+                position: sticky;
+                bottom: 0;
+                color: white;
+                background: $bg_nav;
+                width: 100%;
+                text-align: center;
+            }
+        }
     }
 }
+
 /* fin galeria alquileres */
