--- a/scss/_navegacion.scss
+++ b/scss/_navegacion.scss
@@ -7,7 +7,7 @@ header{
         z-index: 99;
     }
     width: 100%;
-    background: $bg_nav;
+    background: #092546f7;
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     label{
