--- a/scss/_propiedad.scss
+++ b/scss/_propiedad.scss
@@ -1,16 +1,21 @@
 /* propiedad */
 @mixin cuadrados {
     background-color: #6a93cb;
-    background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
-    line-height: 1.6;
-    border: black;
-    border-style: solid;
+    background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);     
     border-radius: 40px 50px;
     width: 100%;
     height: 100%;
     display: inline-block;
-    margin: 5px;
     padding: 15px;
+}
+
+.background-propiedades {
+    background: #0a0a0a;
+    background: linear-gradient(to right, hsla(0, 0%, 2%, 0.849), hsla(240, 1%, 43%, 0.376)), url(https://www.diariojunio.com.ar/fotos/foto0_1_108941_1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    position: relative;
 }
 
 .galeria-propiedad {
@@ -19,10 +24,11 @@
     grid-auto-flow: dense;
     grid-template-columns: repeat(auto-fill, minmax(min(30rem), 1fr));
     grid-auto-rows: auto;
-    padding: 2px;
+    padding: 30px;
     gap: 5px;
-    margin: 15px;
     padding-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 
     .gallery-propiedad {
         display: flex;
@@ -33,6 +39,9 @@
         transition: all 500ms ease;
         border-radius: 5px;
         box-shadow: 1px 10px 15px rgba(0, 0, 0, 0.50);
+        .color-propiedad{
+            background-color: $bg_nav;
+        }
 
         iframe {
             border-radius: 15px;
