--- a/scss/_navegacion.scss
+++ b/scss/_navegacion.scss
@@ -1,47 +1,56 @@
 /* navegacion*/
-body{
+body {
     margin: 0;
 }
-header{
-    nav{
+
+header {
+    nav {
         z-index: 99;
     }
+
     width: 100%;
     background: #092546f7;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins',
+    sans-serif;
     font-size: 1rem;
-    label{
+
+    label {
         display: none;
         width: 43px;
         height: 43px;
         padding: 5px;
         padding-bottom: 5px;
         border: 1px solid #fff;
-        &:hover{
+
+        &:hover {
             cursor: pointer;
-            background: rgba(0,0,0,0.3);
+            background: rgba(0, 0, 0, 0.3);
         }
     }
-    #btn-menu{
+
+    #btn-menu {
         display: none;
     }
-    .menu{
-        ul{
+
+    .menu {
+        ul {
             margin: 0;
             list-style: none;
             padding: 0;
             display: flex;
             justify-content: flex-end;
             z-index: 99;
-            li{
+
+            li {
                 z-index: 99;
                 border-right: 1px solid #fff;
-                // flex-grow: 1;
-                &:hover{
-                    background: rgba(0,0,0,0.3);
+
+                &:hover {
+                    background: rgba(0, 0, 0, 0.3);
                     z-index: 99;
                 }
-                a{
+
+                a {
                     display: block;
                     padding: 15px 20px;
                     color: #fff;
@@ -52,4 +61,5 @@ header{
         }
     }
 }
+
 /* fin navegacion */
