--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -30,5 +30,9 @@
             height: 330px;
             object-fit: cover;
         }
+        .btn-primary{
+            background-color: #1a98d5cc;
+            border-color: #ffffff
+        }
     }
 }
