--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -22,6 +22,16 @@
                 width: 100%;
             }
         }
+        .carousel-control-next{
+            .carousel-control-next-icon{
+                width: 0px;
+            }
+        }
+        .carousel-control-prev{
+            .carousel-control-prev-icon{
+                width: 0px;
+            }
+        }
     }
 
     .cartas {
@@ -44,7 +54,7 @@
             position: absolute;
             background: $bg_nav;
             margin-left: -70%;
-            transition: all 1s;
+            transition: all 1.5s;
 
             ul {
                 flex-direction: column;
@@ -66,13 +76,16 @@
     }
 
     /*galeria de propiedad */
-    .galeria-propiedad {
-        margin: 0 auto;
-        grid-template-columns: repeat(auto-fill, minmax(min(15rem), 1fr));
-        grid-auto-rows: auto;
-        padding: 2px;
-        gap: 5px;
-        padding-bottom: 20px;
+    .background-propiedades {
+
+        .galeria-propiedad {
+            margin: 0;
+            grid-template-columns: repeat(auto-fill, minmax(min(15rem), 1fr));
+            grid-auto-rows: auto;
+            padding: 2px;
+            gap: 5px;
+            padding-bottom: 20px;
+        }
     }
 
     /*galeria del index */
@@ -181,4 +194,5 @@
             }
         }
     }
+
 }
