--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,7 +1,7 @@
 //* footer *//
 footer {
     width: 100%;
-    padding: 50px 0px;
+    padding: 1px;
     background-size: cover;
     background-color: #092546f7;
 
