--- a/scss/_bodygeneral.scss
+++ b/scss/_bodygeneral.scss
@@ -51,6 +51,7 @@ body {
         border-radius: 40px 100px;
         width: 50%;
         margin: auto;
+        margin-bottom: 5px;
     }
 
     main {
