--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,7 +28,8 @@ body {
     font-size: 25px;
     border-radius: 40px 100px;
     width: 50%;
-    margin: auto; }
+    margin: auto;
+    margin-bottom: 5px; }
   body main {
     padding-top: 0px;
     background: #0a0a0a;
